# ima-evm-utils

./: .travis.yml  Makefile.am  README
.github/workflows/: ci.yml
src/: evmctl.c  imaevm.h  libimaevm.c
tests/: Makefile.am  boot_aggregate.test  create_ima_signature.c  fsverity.test  functions.sh  install-openssl3.sh  install-swtpm.sh  install-tss.sh  mmap_check.test  portable_signatures.test  sign_verify.test
